# esm_analysis

./: .gitignore  README.md  esm_analysis.ipynb  pyproject.toml
categorical_jacobian/: README.md  esm_analysis.ipynb  esm_helpers.py
